# Consensus-online

./: .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py  wsgi.py
home/: urls.py  views.py
home/templates/home/: home.html
src/config/: asgi.py  settings.py
templates/: base.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: connect.html  profile.html  subscription.html
