[tool.poetry]
name = "Consensus-online"
version = "0.1.0"
description = ""
authors = ["Swann <swann.bouvier-muller-ext@johnpaul.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
django-environ = "^0.4.5"
crispy = "^0.7.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.0.1"
django-pytest = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
