[tool.poetry]
name = "Consensus-online"
version = "0.1.0"
description = ""
authors = ["Swann <swann.bouvier-muller-ext@johnpaul.com>"]

[tool.poetry.dependencies]
crispy = "^0.7.3"
celery = "^5.2.3"
dj-static = "*"
Django = "^4"
django-anymail = {extras = ["mailjet"], version = "*"}
django-environ = "^0.4.5"
django-crispy-forms = "==1.12.0"
django-filter = "==2.4.0"
django-import-export = "*"
django-storages = "*"
djangorestframework = "^3.13.1"
djangorestframework-gis = "^0.18"
gunicorn = "*"
markdown = "*"
psycopg2 = "==2.9.1"
python = "^3.9"
redis = "==3.5.3"

[tool.poetry.dev-dependencies]
black = "==21.7b0"
django-debug-toolbar = "==3.2.1"
django-extensions = "*"
flake8 = "^4.0.1"
flake8-bugbear = "==21.4.3"
ipyleaflet = "*"
ipython = "*"
jupyter = "*"
pre-commit = "==2.13.0"
prettytable = "*"
pytest = "^7.0.1"
pytest-cov = "*"
pytest-django = "==4.4.0"
pytest-github-actions-annotate-failures = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
